apps/staging/health-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-api
  namespace: life
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - health-api.christophervestman.com
      secretName: health-api-tls
  rules:
    - host: health-api.christophervestman.com
      http:
        paths:
          - backend:
              service:
                name: health-api
                port:
                  number: 8000
            path: /
            pathType: Prefix
